--- a/src/main/resources/templates/GoodContact.html
+++ b/src/main/resources/templates/GoodContact.html
@@ -22,10 +22,19 @@
     <div class="container mt-5">
       <div class="row tm-content-row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-block-col">
-        	<form th:action="@{/bing/toQuerybind}">
-        	<span style="color: white;">套餐名称：</span><input type="text" name="mname" th:value="${binds.mname}" placeholder="" class="input-group-sm"/>
-        	<input type="submit" id="" style="border-radius: 30px 30px 30px 30px;width: 100px;margin-left: 20px;" class="btn-primary" value="查询" />
-          	</form>
+          	<form class="form-inline col-md-11" method="get"  style="margin-bottom: 10px;" th:action="@{/bing/toQuerybind}">
+				<div class="form-group" style="margin:0px 10px 0px 0px;">
+					<label for="exampleInputName2" style="margin-top: 10px">名称:</label>
+					<input type="text" th:value="${binds.mname}" name="mname" style="margin-left: 5px;" class="form-control" id="exampleInputName2" placeholder="名称">
+				</div>
+				<div class="form-group" style="margin:0px 10px 0px 0px;">
+					<label for="exampleInputName2" style="margin-top: 10px">价格:</label>
+					<input type="text" th:value="${binds.zdprice}" name="zdprice" style="margin-left: 5px; width: 100px" class="form-control"  placeholder="最低价">
+					<span style="color: white;">一</span>
+					<input type="text" th:value="${binds.zgprice}" name="zgprice" style="margin-left: 5px; width: 100px" class="form-control"  placeholder="最高价">
+				</div>
+				<input type="submit" class="btn btn-info urls"  value="查询">
+			</form>
           <div class="tm-bg-primary-dark tm-block tm-block-products" style="margin-top: 30px;">
             <div class="tm-product-table-container">
               <table class="table table-hover tm-table-small tm-product-table" style="text-align: center;">
