--- a/src/main/resources/templates/TeamDetails.html
+++ b/src/main/resources/templates/TeamDetails.html
@@ -475,7 +475,7 @@
 							divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses"+index+"'><span class='step'>01</span><span>负责人订单</span></a></h4></div>");
 							$(div).append(divh).append(divh1);
 						}else{
-							divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses"+index+"'><span class='step'>01</span><span>队员名称</span></a></h4></div>");
+							divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses"+index+"'><span class='step'>01</span><span>"+item.uname+"</span></a></h4></div>");
 							$(div).append(divh).append(divh1);
 						}
 							$(".box").append(div1);
