--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>PageHome</title>
+		<title>研学旅行官网</title>
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
