--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.themleaf.org">
+<html lang="en" xmlns:th="http://www.themleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
