--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -67,7 +67,7 @@
 				color: #999;
 			}
 			
-			img {
+			.imgs {
 			    max-width: 100%;
 			    width: 273px;
 			    height: 168px;
@@ -268,7 +268,7 @@
 					<span>实惠套餐</span>
 					<div class="order-top" th:each="bitem : ${blist}">
 						<li class="im-g">
-							<a th:href="@{/menu/toquerymenu1Byid(id=${bitem.id},type='4')}"><img th:if="${bitem.image!=null}" th:src="${bitem.image.url}" width="273px" height="169px"/></a>
+							<a th:href="@{/menu/toquerymenu1Byid(id=${bitem.id},type='4')}"><img th:if="${bitem.image!=null}" class="imgs" th:src="${bitem.image.url}" width="273px" height="169px"/></a>
 						</li>
 						<li class="data">
 							<h3 th:text="${bitem.price}"></h3>
@@ -290,7 +290,7 @@
 					<span th:text="${item.tname}"></span>
 					<div class="order-top" th:each="items : ${item.list}">
 						<li class="im-g">
-							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.image!=null}" th:src="${items.image.url}" width="273" height="169"/></a>
+							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.image!=null}" class="imgs" th:src="${items.image.url}" width="273" height="169"/></a>
 						</li>
 						<li class="data">
 							<h3 th:text="${items.price}"></h3>
